# process-manager-backend

./: .env.example  Cargo.toml  start.sh
.github/workflows/: rust.yml
.sqlx/: query-82614661556fa6b6a6ffebb0e8eaa7c91a6a134d8cd70b86107f833325cf5703.json  query-c364a1fb66c79f7a6bb9b01ea238b6b72536e71b57afbd4e4be940ca1a2c646f.json  query-c6e1effac69b6f800d9de8c466f035734dd74d89a713ebbc315b954f4778d05a.json
src/: main.rs
src/routes/: get.rs  mod.rs
src/routes/_auth/: mod.rs
src/routes/_auth/process/: get.rs  mod.rs  put.rs
src/routes/_auth/process/p_id/: delete.rs  get.rs  mod.rs  patch.rs  post.rs
src/routes/_auth/process/p_id/git/: get.rs  mod.rs  post.rs
src/routes/_auth/process/p_id/logs/: get.rs  mod.rs
src/routes/_auth/process/p_id/users/: get.rs  mod.rs  put.rs
src/routes/_auth/process/p_id/users/u_id/: delete.rs  mod.rs
src/routes/auth/: get.rs  mod.rs
src/routes/auth/login/: post.rs
src/routes/auth/register/: mod.rs  post.rs
