[package]
name = "process-manager-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
sqlx = { version = "0.7.3", features = ["postgres", "runtime-tokio", "json", "chrono", "macros"] }
axum = { version = "0.7.2", features = ["tokio"] }
serde = { version = "1.0.108", features = ["derive"] }
serde_json = "1.0.110"
tokio = { version = "1.35.0", features = ["rt-multi-thread", "rt", "macros", "process", "io-util" ] }
dotenv = "0.15.0"
tower-http = { version = "0.5.0", features = ["cors"] }
tower-cookies = "0.10.0"
lazy_static = "1.4.0"
sha3 = "0.10.8"
uuid = "1.6.1"
rand = "0.8.5"
futures-util = "0.3.30"
ctrlc-async = "3.2.2"
time = "0.3.31"
nix = "0.27.1"